--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -6,7 +6,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    /* padding: 10px 20px; */
+    padding: 10px 20px;
     background-color: rgb(0, 123, 255);
     border-radius: 10px;
     filter: drop-shadow(0px 0px 10px rgba(0, 123, 255, 0.7));
@@ -19,4 +19,54 @@
     font-family: "Lexend", serif;
     font-size: 20pt;
     font-weight: 600;
+}
+
+.logoOuter {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+    margin-right: 10px;
+    cursor: pointer;
+    position: relative;
+    transition: filter 0.3s ease-in;
+}
+
+.logoTitle {
+    color: white;
+    font-family: "Lexend", serif;
+    font-size: 15pt;
+    font-weight: 500;
+    position: absolute;
+    right: 50px;
+    opacity: 0;
+    transform: translateX(100%);
+    transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
+.logo {
+    width: 40px;
+    height: 40px;
+}
+
+.logoOuter:hover .logoTitle {
+    opacity: 1;
+    transform: translateX(0);
+}
+
+.logoOuter:hover {
+    filter: drop-shadow(0px 0px 10px rgba(255, 255, 255, 0.7));
+}
+
+@media (max-width: 600px) {
+    .header {
+        flex-direction: column;
+        width: 80vw;
+        margin-left: 10vw;
+        padding: 20px 0px;
+    }
+
+    .title {
+        margin-left: 0;
+    }
 }
